# nautilus-sendto-tailscale

./: meson.build
src/: extension.vala  meson.build
